fix flickering width of search input

--- a/frontend/components/editor/drawers/DrawerSearch.module.css
+++ b/frontend/components/editor/drawers/DrawerSearch.module.css
@@ -33,3 +33,7 @@
 .hiddenButton {
   display: none;
 }
+
+.notVisible {
+  visibility: hidden;
+}
